# prop-cc-new

./: AUTHORS  COPYING  COPYRIGHT  ChangeLog  Makefile  Makefile.am  Makefile.in  README  VERSION  configure  configure.ac  libtool  prop.am  propwrap
VisualStudio2010/: prop.props
app/setl-pe/: foundation.h  (+7 more)
configure-dir/: Makefile.prop-src
demos/: Makefile  Makefile.am  Makefile.in  exp.pcc  inference.pC  logic.pC  logic2.pC  logic3.h  logic3.ph  persistence.pcc  prog.pcc  rewrite-trick1.pC  rewrite-trick2.pC  rewrite-trick3.pcc  rewrite-trick4.pcc  rewrite-trick5.pcc
docs/: refman.aux  refman.dvi  refman.idx  refman.ps  refman.toc
include/: Makefile.am  Makefile.in  propdefs.h
include/AD/automata/: compdfa.h  densedfa.h  ebnf.h  ebnf.ph  firstset2.h  follow_k.h  gla.h  grammar.h  iolexerbuf.h  item.h  lexerbuf.h  lr1.h  lrparser.h  nfa_node.h  nfa_node.old.h  scanner.h  treegram.h  treegram.ph  treegrm.h  treepat.h
include/AD/backend-tools/: codeemit.h
include/AD/config/: config.h  config.h.in
include/AD/contain/: bitset.h  charset.h  fbitset.h  hashmap.h  n_array.h  slnklist.h  vararray.h  variset.h  varptrarray.h
include/AD/csp/: cspheap.h  cspstack.h  logicalterm.h  trail.h
include/AD/gc/: bgc.h  bgc_fast.h  cgc.h  gc.h  gcarray.h  gcbitmap.h  gcconfig.h  gccontrol.h  gcheaps.h  gcmacros.h  gcobject.h  gcverify.h  markswp.h  userheap.h  weakptr.h
include/AD/generic/: except.h  ordering.h
include/AD/graph/: graph.h
include/AD/hash/: bhash.h  bhash2.h  chash2.h  dchash.h  dhash.h  dhash2.h  lhash.h  lhash2.h  ohash.h  ohash2.h
include/AD/memory/: arena.h  blacklistmem.h  boundtag.h  buddy.h  cleanmem.h  mem.h  mempool.h  strpool.h  sysmem.h  uniqobj.h
include/AD/numeric/: bigint.h  complex.h  gaussint.h  vector3d.h
include/AD/objc/: objc.h
include/AD/object/: object.h
include/AD/parser-tools/: source_location.h
include/AD/persist/: parray.h  po_impl.h  pstream.h
include/AD/prettypr/: prettypr.h
include/AD/rete/: gen_rete.h  token.h
include/AD/rewrite/: b_items.h  b_rules.h  gccache.h  reduce.h  twig.h
include/AD/setl/: elem.h  qa.cc
include/AD/sort/: bubble.h  bubble2.h  heapsort.h  heapsrt2.h  insort.h  insort2.h  quicksrt.h  shellsrt.h  shellst2.h
include/AD/strings/: atom.h  quark.h  str.h  string.h
include/AD/symbolic/: atom.h  bdd.h  expr.h  string.h  term.h
include/AD/trees/: fibheap.h  leftist.h  pagoda.h
include/AD/visualize/: vcg.h  visualizer.h
lib-src/: Makefile  Makefile.am  Makefile.in
lib-src/ag/: parsetree.cc
lib-src/automata/: Makefile  Makefile.am  Makefile.in  bottomup.cc  compdfa.cc  densedfa.cc  firstset.cc  gla.cc  graminfo.cc  grammar.cc  iolexerbuf.cc  iolexerstack.cc  item.cc  lalr1gen.cc  lalrkgen.cc  lexerbuf.cc  lexergen.cc  lexergen.old.cc  lexergen2.cc  ll1gen.cc  llkgen.cc  lookahd.cc  lr0.cc  lr1gen.cc  lrerror.cc  lrgen.cc  lrparser.cc  nfa.cc  nfa_node.cc  nfa_node.old.cc  qa.cc  scanner.cc  topdowng.cc  topdowng.pcc  treeauto.cc  treegen.cc  treegen.pcc  treegram.cc  treegram.pcc
lib-src/backend-tools/: Makefile  Makefile.am  Makefile.in  codeemit.cc
lib-src/contain/: Makefile  Makefile.am  Makefile.in  basiccol.cc  bytearry.cc  charset.cc  fbitset.cc  intset.cc  intsets.cc  qa.cc  test.cc  variset.cc
lib-src/csp/: Makefile  Makefile.am  Makefile.in  logicalterm.cc  trail.cc
lib-src/gc/: Makefile  Makefile.am  Makefile.in  bgc.cc  cgc.cc  gc.cc  gcbitmap.cc  gcheaps.cc  gctimer.cc  gcverify.cc  markswp.cc  userheap.cc  weakptr.cc
lib-src/generic/: Makefile  Makefile.am  Makefile.in  except.cc  generic.cc  qa.cc
lib-src/graph/: Makefile  Makefile.am  Makefile.in  graph.cc  graphaux.cc  qa.cc
lib-src/graphtype/: Makefile  Makefile.am  Makefile.in
lib-src/hash/: Makefile  Makefile.am  Makefile.in  qa.cc
lib-src/memory/: Makefile  Makefile.am  Makefile.in  blacklistmem.cc  boundtag.cc  buddysys.cc  cleanmem.cc  mem.cc  mempool.cc  qa.cc  strpool.cc  sysmem.cc
lib-src/numeric/: Makefile  Makefile.am  Makefile.in  bigint.cc  complex.cc  matrix.cc  qa.cc  random.cc  vector.cc
lib-src/persist/: Makefile  Makefile.am  Makefile.in  pfactory.cc  piostream.cc  pistream.cc  pmisc.cc  postream.cc  pstream.cc  ptype.cc  qa.cc
lib-src/pretty/: Makefile  Makefile.am  Makefile.in
lib-src/prettypr/: Makefile  Makefile.am  Makefile.in
lib-src/prop/: Makefile  Makefile.am  Makefile.in
lib-src/rete/: Makefile  Makefile.am  Makefile.in  gen_rete.cc  rete.cc
lib-src/rewrite/: Makefile  Makefile.am  Makefile.in  b_rules.cc  b_rules.pcc  cache.cc  treegram.old.h
lib-src/scheduling/: cyclescheduler.cc
lib-src/sort/: qa.cc
lib-src/strings/: Makefile  Makefile.am  Makefile.in  atom.cc  bm.cc  bmgrep.cc  charesc.cc  grep.cc  kmp.cc  kmpgrep.cc  kr.cc  krgrep.cc  qa.cc  quark.cc  regexp.cc  str.cc  string.cc  twoway.cc
lib-src/symbolic/: Makefile  Makefile.am  Makefile.in  atom.cc  bdd.cc  string.cc
lib-src/trees/: Makefile  Makefile.am  Makefile.in  avl.cc  qa.cc  trees.cc
lib-src/tries/: Makefile  Makefile.am  Makefile.in  briandai.cc  hashtrie.cc  qa.cc
lib-src/visualize/: Makefile  Makefile.am  Makefile.in  vcg.cc
prop-src/: Makefile  Makefile.am  Makefile.in  aggen.cc  aggen.h  ast.cc  ast.h  ast.pcc  ast.ph  automake.cc  basics.h  basics.ph  bitfield.h  classdef.cc  codegen.cc  codegen.h  codegen.pcc  collection.cc  collection.h  compiler.cc  compiler.h  compiler.pcc  config.h  constr.cc  datagen.cc  datatype.cc  datatype.h  datatype.pcc  depends1  depends2  documentation.cc  documentation.pcc  env.cc  env.h  funmap.cc  funmap.h  funmap.pcc  gcgen.cc  gcgen.pcc  graphedges.h  (+92 more)
tests/: Makefile  T3.pcc  bubble_sort.pcc  gcbug2.cc  hashcons.cc  hashcons.pcc  hashcons2.cc  hashcons2.pcc  inference.pcc  insertion_sort.pcc  list1.pcc  list2.pcc  listiter.pcc  logical_patterns.pcc  merge_sort.pcc  persist1.pcc  persist2.pcc  poly1.cc  poly2.pcc  printer1.pcc  prop1.pcc  prop2.pcc  prop3.pcc  prop4.pcc  prop5.pcc  prop6.pcc  prop7.pcc  prop9.pcc  qa1.cc  qa2.cc  qa3.cc  qa4.cc  qa5.cc  qa6.cc  qa7.cc  qa8.cc  refcounting.cc  refcounting.pcc  regexp.pcc  rewriting.cc  (+36 more)
(+59 files in other folders)
