# Copyright (c) 2011 Argonne National Laboratory
# All rights reserved.
# 
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
# 1. Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the above copyright
#    notice, this list of conditions and the following disclaimer in the
#    documentation and/or other materials provided with the distribution.
# 
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
# TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE FOUNDATION OR CONTRIBUTORS
# BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
# POSSIBILITY OF SUCH DAMAGE.

AM_CPPFLAGS = -I$(top_srcdir)/include

PROP_OPTS_LOCAL = -save_space
include $(top_srcdir)/prop.am

# automake does not automatically generate the dependency includes,
# so that is done here manually...

@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ir.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ast.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/basics.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/parsegen.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/keywords.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/parser.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/collection.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/setl-ast.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/setlgen.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/matchcom.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/trs.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/timespace.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/env.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/funmap.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/metasyntax.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pat.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/list.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/grsgen.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/graphtype.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/graphedges.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/aggen.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/datatype.Pph@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rwmix.Pph@am__quote@
#@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dataflow.Pph@am__quote@
#@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bitfield.Pph@am__quote@
#@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wam.Pph@am__quote@
#@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/constraint.Pph@am__quote@
#@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/logicgen.Pph@am__quote@

@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/persistgen.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gcgen.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/printgen.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/matchcom.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/matchgen.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/infgen.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/type.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/printing.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/datagen.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/codegen.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/compiler.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/indexing.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ast.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/constr.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/parsegen.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lexeme.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lexer.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/trs.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/trs2.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/trs3.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rwgen.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rwgen2.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rwgen3.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rwgen4.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rwgen5.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lawgen.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/parser-util.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/parser.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/setl-ast.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/documentation.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/collection.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/setlgen.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/setltype.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/timespace.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/env.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/funmap.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/metasyntax.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pat.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/grsgen.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/selector.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/graphtype.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/graphrep.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/graphops.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/graphreport.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/classdef.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/prop-main.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/aggen.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/datatype.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/instance.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/visualize.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/visual2.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rwmix.Ppo@am__quote@
#@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dataflow.Ppo@am__quote@
#@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bitfield.Ppo@am__quote@
#@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/constraint.Ppo@am__quote@
#@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/logicgen.Ppo@am__quote@
#@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wam.Ppo@am__quote@

prop_headers_ph = \
	ir.ph ast.ph basics.ph parsegen.ph keywords.ph parser.ph \
	collection.ph setl-ast.ph setlgen.ph matchcom.ph \
	trs.ph timespace.ph env.ph funmap.ph metasyntax.ph \
	pat.ph list.ph grsgen.ph graphtype.ph graphedges.ph \
	aggen.ph datatype.ph rwmix.ph
#	dataflow.ph bitfield.ph wam.ph constraint.ph logicgen.ph 

prop_sources_pcc = \
	persistgen.pcc gcgen.pcc printgen.pcc \
	matchcom.pcc matchgen.pcc infgen.pcc type.pcc \
	printing.pcc datagen.pcc codegen.pcc compiler.pcc indexing.pcc \
	ast.pcc constr.pcc parsegen.pcc lexeme.pcc lexer.pcc \
	trs.pcc trs2.pcc trs3.pcc \
	rwgen.pcc rwgen2.pcc rwgen3.pcc rwgen4.pcc rwgen5.pcc \
	lawgen.pcc parser-util.pcc parser.pcc setl-ast.pcc \
	documentation.pcc collection.pcc setlgen.pcc setltype.pcc \
	timespace.pcc env.pcc funmap.pcc metasyntax.pcc \
	pat.pcc grsgen.pcc selector.pcc \
	graphtype.pcc graphrep.pcc graphops.pcc graphreport.pcc \
	classdef.pcc prop-main.pcc \
	aggen.pcc datatype.pcc instance.pcc \
	visualize.pcc visual2.pcc rwmix.pcc
#	dataflow.pcc bitfield.pcc constraint.pcc logicgen.pcc wam.pcc 

EXTRA_DIST = $(prop_headers_ph) $(prop_sources_pcc)

CLEANFILES = *.report

bin_PROGRAMS = prop

prop_SOURCES = \
	$(prop_headers_ph:.ph=.h) \
	author.h automake.h classdef.h codegen.h compiler.h \
	config.h datagen.h functortab.h hashtab.h infgen.h labelgen.h \
	options.h patenv.h rwgen.h textbuf.h type.h visualize.h \
	$(prop_sources_pcc:.pcc=.cc) \
	automake.cc frontend.cc functortab.cc \
	hashtab.cc labelgen.cc options.cc \
	patenv.cc process.cc textbuf.cc

BUILT_SOURCES = \
	$(prop_headers_ph:.ph=.h) \
	$(prop_sources_pcc:.pcc=.cc)

prop_LDADD = $(top_builddir)/lib-src/libprop.la

